docker compose configuration changes

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "node" : ["localhost:36210"],
     "network": "mainnet",
     "block_wait_time_seconds": "3",
-    "redis_address": "localhost:6379",
+    "redis_address": "redis:6379",
     "redis_channel": "NewBlockTemplateChannel"
 }
