changed image name in workflow

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,6 +2,8 @@ name: Docker Push block template fetcher
 
 on:
   push:
+    branches:
+      - master
 
 env:
   REGISTRY: ghcr.io
@@ -22,14 +24,14 @@ jobs:
         run: echo "branch_name=$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//-/g')" >> $GITHUB_ENV
 
       - name: Docker Login
-        run: echo "${{ secrets.GB_KASPOOL_TOKEN }}" | docker login ${{ env.REGISTRY }} --username coinchimp --password-stdin
+        run: echo "${{ secrets.GB_KASPOOL_TOKEN }}" | docker login ${{ env.REGISTRY }} --username argonmining --password-stdin
 
       - name: Docker Build
         env:
-          IMAGE_NAME: ${{ github.repository }}:v2408.1b-${{ env.branch_name }}
+          IMAGE_NAME: ${{ github.repository }}:latest
         run: docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} .
 
       - name: Docker Push
         env:
-          IMAGE_NAME: ${{ github.repository }}:v2408.1b-${{ env.branch_name }}
+          IMAGE_NAME: ${{ github.repository }}:latest
         run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
