--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,8 +2,6 @@ name: Docker Push block template fetcher
 
 on:
   push:
-    branches:
-      - master
 
 env:
   REGISTRY: ghcr.io
@@ -28,10 +26,10 @@ jobs:
 
       - name: Docker Build
         env:
-          IMAGE_NAME: ${{ github.repository }}:latest
+          IMAGE_NAME: ${{ github.repository }}:beta-v1.0.0-${{ env.branch_name }}
         run: docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }} .
 
       - name: Docker Push
         env:
-          IMAGE_NAME: ${{ github.repository }}:latest
+          IMAGE_NAME: ${{ github.repository }}:beta-v1.0.0-${{ env.branch_name }}
         run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
